# MDSDHVRP-Solver

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp  main.h  outputtje.txt
R/: check_solution.R
customer/: customer.cpp  customer.h
depot/: depot.h
doc/: INFO.md
doc/html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md_source.html  allocatecustomer_8cpp_source.html  annotated.html  assignroutetovehicle_8cpp_source.html  bestswap_8cpp_source.html  bestswapstar_8cpp_source.html  besttwoopt_8cpp_source.html  cheapestinsertion2_8cpp_source.html  cheapestinsertionwithsplits_8cpp_source.html  class_customer-members.html  class_customer.html  class_depot-members.html  class_depot.html  class_env-members.html  class_env.html  class_init-members.html  class_init.html  class_route-members.html  class_route.html  class_solution-members.html  class_solution.html  class_solver-members.html  class_solver.html  class_vehicle-members.html  class_vehicle.html  classes.html  computeremovalgain_8cpp_source.html  costremoval_8cpp_source.html  createdistancematrix_8cpp_source.html  createforbiddenvehiclesandcustomers_8cpp_source.html  customer_2operatoroutput_8cpp_source.html  customer_8cpp_source.html  customer_8h_source.html  deletevehicle_8cpp_source.html  (+110 more)
inc/: customer.h  depot.h  env.h  init.h  main.h  route.h  solution.h  solver.h  vehicle.h
notebooks/: visualise-solution.ipynb
route/: route.cpp  route.h
solution/: print.cpp
src/: main.cpp
vehicle/: vehicle.cpp  vehicle.h  vehicle.ih
(+210 files in other folders)
